# BTC-note-on-chain

./: .gitignore  README.md  flask_server.py  pyproject.toml
bitcoin/: bitcoin_actions.py
flaskr/: __init__.py  note.py
flaskr/static/: style.css
flaskr/static/js/: check_payment.js  cost.js
flaskr/templates/: base.html
flaskr/templates/note/: note.html  success.html  wait_for_payment.html
